THE PANORAMA WORKS

--- a/2d.html
+++ b/2d.html
@@ -17,44 +17,51 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>2d</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3839925840"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3770011903"/>
-  <link rel="stylesheet" type="text/css" href="css/2d.css?crc=495268839" id="pagesheet"/>
-   </head>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4110669070"/>
+  <link rel="stylesheet" type="text/css" href="css/2d.css?crc=3898433302" id="pagesheet"/>
+    <!--HTML Widget code-->
+  
+
+ </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppu1937"><!-- column -->
-    <div class="clearfix colelem" id="pu1937"><!-- group -->
-     <div class="browser_width grpelem" id="u1937-bw">
-      <div id="u1937"><!-- group -->
-       <div class="clearfix" id="u1937_align_to_page">
-        <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" data-hidpi-src="https://media.githubusercontent.com/media/sophiaboss11/sophiaboss11.github.io/master/images/Gifs/sb_icon.gif" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
-        <a class="nonblock nontext clearfix grpelem" id="u1685-4" href="home.html"><!-- content --><p>Home</p></a>
-        <a class="nonblock nontext clearfix grpelem" id="u1688-4" href="work.html"><!-- content --><p>Work</p></a>
-        <a class="nonblock nontext clearfix grpelem" id="u1691-4" href="about.html"><!-- content --><p>About</p></a>
+   <div class="clearfix grpelem" id="pu1937"><!-- column -->
+    <div class="browser_width colelem" id="u1937-bw">
+     <div id="u1937"><!-- group -->
+      <div class="clearfix" id="u1937_align_to_page">
+       <a class="nonblock nontext clip_frame grpelem" id="u1928" href="index.html"><!-- image --><img class="block" id="u1928_img" src="images/sb_icon.gif?crc=4191900242" data-hidpi-src="images/sb_icon_2x.gif?crc=4191900242" alt="" data-heightwidthratio="0.21390374331550802" data-image-width="187" data-image-height="40"/></a>
+       <div class="clearfix grpelem" id="pu2265"><!-- group -->
+        <div class="size_fixed grpelem" id="u2265" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"><!-- custom html -->
+         
+<!-- This Adobe Muse widget was created by the team at MuseFree.com -->
+<canvas id="canvas"></canvas>
+ 
+        </div>
+        <a class="nonblock nontext grpelem" id="u2283" href="index.html"><!-- simple frame --></a>
+        <a class="nonblock nontext grpelem" id="u2286" href="work.html"><!-- simple frame --></a>
+        <a class="nonblock nontext grpelem" id="u2289" href="about.html"><!-- simple frame --></a>
+        <a class="nonblock nontext grpelem" id="u2292" href="critiquepage.html"><!-- simple frame --></a>
        </div>
       </div>
-     </div>
-     <div class="browser_width grpelem" id="u1953-bw">
-      <div id="u1953"><!-- simple frame --></div>
      </div>
     </div>
     <div class="clearfix colelem" id="ppu641"><!-- group -->
      <div class="clearfix grpelem" id="pu641"><!-- column -->
       <div class="clip_frame colelem" id="u641"><!-- image -->
-       <img class="block" id="u641_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/purple_tree_cropped.jpg" data-hidpi-src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/purple_tree_cropped.jpg" alt="" data-heightwidthratio="0.9772151898734177" data-image-width="395" data-image-height="386"/>
+       <img class="block" id="u641_img" src="images/purple_tree_cropped.jpg?crc=364062302" data-hidpi-src="images/purple_tree_cropped_2x.jpg?crc=231465062" alt="" data-heightwidthratio="0.9772151898734177" data-image-width="395" data-image-height="386"/>
       </div>
       <div class="clip_frame colelem" id="u671"><!-- image -->
-       <img class="block" id="u671_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/drip%20girl.jpg" data-hidpi-src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/drip%20girl.jpg" alt="" data-heightwidthratio="1.3341772151898734" data-image-width="395" data-image-height="527"/>
+       <img class="block" id="u671_img" src="images/drip%20girl.jpg?crc=206176624" data-hidpi-src="images/drip%20girl_2x.jpg?crc=122943597" alt="" data-heightwidthratio="1.3341772151898734" data-image-width="395" data-image-height="527"/>
       </div>
       <div class="clip_frame colelem" id="u693"><!-- image -->
-       <img class="block" id="u693_img" src="https://github.com/sophiaboss11/sophiaboss11.github.io/blob/master/images/mountain_poster_final_merged_1.jpg" data-hidpi-src="https://github.com/sophiaboss11/sophiaboss11.github.io/blob/master/images/mountain_poster_final_merged_1.jpg" alt="" data-heightwidthratio="1.6799007444168734" data-image-width="403" data-image-height="677"/>
+       <img class="block" id="u693_img" src="images/mountain_poster_final_merged_1.jpg?crc=4187933315" data-hidpi-src="images/mountain_poster_final_merged_1_2x.jpg?crc=3951581017" alt="" data-heightwidthratio="1.6799007444168734" data-image-width="403" data-image-height="677"/>
       </div>
       <div class="clip_frame colelem" id="u713"><!-- image -->
        <img class="block" id="u713_img" src="images/exhibition_poster_2_1.jpg?crc=3781136672" data-hidpi-src="images/exhibition_poster_2_1_2x.jpg?crc=133316486" alt="" data-heightwidthratio="1.3325062034739454" data-image-width="403" data-image-height="537"/>
       </div>
       <div class="clip_frame colelem" id="u739"><!-- image -->
-       <img class="block" id="u739_img" src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/charcoal%20drawing.jpg" data-hidpi-src="https://raw.githubusercontent.com/sophiaboss11/sophiaboss11.github.io/master/images/charcoal%20drawing.jpg" alt="" data-heightwidthratio="1" data-image-width="403" data-image-height="403"/>
+       <img class="block" id="u739_img" src="images/charcoal%20drawing.jpg?crc=3930353741" data-hidpi-src="images/charcoal%20drawing_2x.jpg?crc=363616718" alt="" data-heightwidthratio="1" data-image-width="403" data-image-height="403"/>
       </div>
       <div class="clip_frame colelem" id="u759"><!-- image -->
        <img class="block" id="u759_img" src="images/scannable%20document%2018%20on%20jun%205%2c%202020%20at%205_04_41%20pm.jpg?crc=3953363929" data-hidpi-src="images/scannable%20document%2018%20on%20jun%205%2c%202020%20at%205_04_41%20pm_2x.jpg?crc=438251124" alt="" data-heightwidthratio="0.5637254901960784" data-image-width="408" data-image-height="230"/>
@@ -63,9 +70,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <img class="block" id="u779_img" src="images/scannable%20document%20on%20jun%205%2c%202020%20at%204_36_49%20pm.jpg?crc=392866786" data-hidpi-src="images/scannable%20document%20on%20jun%205%2c%202020%20at%204_36_49%20pm_2x.jpg?crc=530181178" alt="" data-heightwidthratio="0.863080684596577" data-image-width="409" data-image-height="353"/>
       </div>
      </div>
-     <div class="clearfix grpelem" id="pu661"><!-- column -->
-      <div class="clip_frame colelem" id="u661"><!-- image -->
-       <img class="block" id="u661_img" src="images/power_cube_2.jpg?crc=323635876" data-hidpi-src="images/power_cube_2_2x.jpg?crc=3942203823" alt="" data-heightwidthratio="1.271393643031785" data-image-width="409" data-image-height="520"/>
+     <div class="clearfix grpelem" id="ppu2101-3"><!-- column -->
+      <div class="clearfix colelem" id="pu2101-3"><!-- group -->
+       <div class="clearfix grpelem" id="u2101-3"><!-- content -->
+        <p>&nbsp;</p>
+       </div>
+       <div class="clip_frame grpelem" id="u661"><!-- image -->
+        <img class="block" id="u661_img" src="images/power_cube_2.jpg?crc=323635876" data-hidpi-src="images/power_cube_2_2x.jpg?crc=3942203823" alt="" data-heightwidthratio="1.271393643031785" data-image-width="409" data-image-height="520"/>
+       </div>
       </div>
       <div class="clip_frame colelem" id="u683"><!-- image -->
        <img class="block" id="u683_img" src="images/lion.jpg?crc=215841182" data-hidpi-src="images/lion_2x.jpg?crc=4011296556" alt="" data-heightwidthratio="1.3667481662591687" data-image-width="409" data-image-height="559"/>
@@ -112,9 +124,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <div class="clip_frame grpelem" id="u1154"><!-- image -->
       <img class="block" id="u1154_img" src="images/scannable%20document%209%20on%20jun%205%2c%202020%20at%205_04_41%20pm.jpg?crc=3973433915" data-hidpi-src="images/scannable%20document%209%20on%20jun%205%2c%202020%20at%205_04_41%20pm_2x.jpg?crc=435446356" alt="" data-heightwidthratio="1.1296296296296295" data-image-width="216" data-image-height="244"/>
-     </div>
-     <div class="clip_frame grpelem" id="u1156"><!-- image -->
-      <img class="block" id="u1156_img" src="images/scannable%20document%2015%20on%20jun%205%2c%202020%20at%204_54_02%20pm.jpg?crc=4180822422" data-hidpi-src="images/scannable%20document%2015%20on%20jun%205%2c%202020%20at%204_54_02%20pm_2x.jpg?crc=4275842310" alt="" data-heightwidthratio="1" data-image-width="221" data-image-height="221"/>
      </div>
      <div class="clip_frame grpelem" id="u1158"><!-- image -->
       <img class="block" id="u1158_img" src="images/scannable%20document%20on%20jun%205%2c%202020%20at%205_09_49%20pm.jpg?crc=3989033823" data-hidpi-src="images/scannable%20document%20on%20jun%205%2c%202020%20at%205_09_49%20pm_2x.jpg?crc=135459345" alt="" data-heightwidthratio="1.2582159624413145" data-image-width="426" data-image-height="536"/>
@@ -178,6 +187,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
   </div>
+  <!-- JS includes -->
+  <script type="text/javascript">
+   if (document.location.protocol != 'https:') document.write('\x3Cscript src="http://musecdn2.businesscatalyst.com/scripts/4.0/jquery-1.8.3.min.js" type="text/javascript">\x3C/script>');
+</script>
+  <script type="text/javascript">
+   window.jQuery || document.write('\x3Cscript src="scripts/jquery-1.8.3.min.js?crc=209076791" type="text/javascript">\x3C/script>');
+</script>
   <!-- Other scripts -->
   <script type="text/javascript">
    // Decide whether to suppress missing file error or not based on preference setting
@@ -205,5 +221,12 @@ Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 </script>
   <!-- RequireJS script -->
   <script src="scripts/require.js?crc=4177726516" type="text/javascript" async data-main="scripts/museconfig.js?crc=128606099" onload="if (requirejs) requirejs.onError = function(requireType, requireModule) { if (requireType && requireType.toString && requireType.toString().indexOf && 0 <= requireType.toString().indexOf('#scripterror')) window.Muse.assets.check(); }" onerror="window.Muse.assets.check();"></script>
+  
+  <!--HTML Widget code-->
+  
+	 <script>
+var TM=window.TM||{};TM.sliceWidth=1,TM.amplitude=3,TM.frequency=100,TM.amplitudeOffset=1.5,TM.message="Work         Home        About        Critique",TM.W=438,TM.H=44,TM.FONT_SIZE=20,TM.LOGO_RECT={x:0,y:0,width:TM.W,height:TM.FONT_SIZE},TM.init=function(){TM.setUpCanvas(),TM.SLICE_ANIM=new TM.SliceAnim,TM.initControls()},TM.setUpCanvas=function(){TM.LOGO_RECT.x=Math.round(.5*(TM.W-TM.LOGO_RECT.width)),TM.LOGO_RECT.y=Math.round(.5*(TM.H-TM.LOGO_RECT.height));var e=window.devicePixelRatio||1;TM.IS_RETINA=e>=1.5;var t=window.document.getElementById("canvas"),i=t.getContext("2d"),n=i.webkitBackingStorePixelRatio||i.mozBackingStorePixelRatio||i.msBackingStorePixelRatio||i.oBackingStorePixelRatio||i.backingStorePixelRatio||1,a=e/n;t.width=TM.W,t.height=TM.H;var T=t.width;t.width=T*a,t.style.width=T+"px";var s=t.height;t.height=s*a,t.style.height=s+"px",i.scale(a,a)},TM.initControls=function(){$(document).mousemove(function(e){TM.onInput(e.pageX-$("#canvas").offset().left,e.pageY-$("#canvas").offset().top)})},TM.onInput=function(e,t){if(TM.SLICE_ANIM){var i=-TM.LOGO_RECT.width+TM.LOGO_RECT.x,n=-TM.LOGO_RECT.height+TM.LOGO_RECT.y;if(maxX=2*TM.LOGO_RECT.width+TM.LOGO_RECT.x,maxY=2*TM.LOGO_RECT.height+TM.LOGO_RECT.y,e>=i&&e<=maxX&&t>=n&&t<=maxY){var a=(e-TM.LOGO_RECT.x)/TM.LOGO_RECT.width;TM.SLICE_ANIM.userInput(a)}else TM.SLICE_ANIM.userInput(0)}},$(window).ready(function(){TM.init()}),window.requestAnimFrame=function(){return window.requestAnimationFrame||window.webkitRequestAnimationFrame||window.mozRequestAnimationFrame||function(e){window.setTimeout(e,1e3/60)}}(),TM.SliceAnim=function(){var e=this;e.isPlaying=!1,e.sliceWidth=TM.sliceWidth,e.amplitude=TM.amplitude,e.frequency=TM.frequency,e.amplitudeOffset=TM.amplitudeOffset,e.wavePosition=1,e.sets=[],e.waveSpeed=13e-5,e.canvas=0,e.ctx=0,e.ix=-1,e.init=function(){e.canvas=document.getElementById("canvas"),e.ctx=e.canvas.getContext("2d"),setTimeout(function(){e.start()},100)},e.drawBuffer=function(){var e=TM.IS_RETINA?2:1,t=TM.message.toUpperCase(),i=["#73A0FF","#D23FFF","#E61D40","#0000FF","#FFFFD7"];buffer=document.createElement("canvas"),buffer.width=1e3*e,buffer.height=TM.LOGO_RECT.height*i.length*e;var n=buffer.getContext("2d");n.font=TM.LOGO_RECT.height*e+"px Arial",TM.LOGO_RECT.width=Math.ceil(n.measureText(t).width/e),TM.LOGO_RECT.x=Math.round(.5*(TM.W-TM.LOGO_RECT.width));for(var a=0,T=i.length;T>a;a++)n.fillStyle=i[a],n.fillText(t,0,-.25*TM.LOGO_RECT.height+(a+1)*TM.LOGO_RECT.height*e);return buffer},e.createSets=function(){e.sets=[],TM.LOGO_SHEET=new Image,TM.LOGO_SHEET.src=e.drawBuffer().toDataURL();for(var t=1,i=0;5>i;i++){var n={sliceWidth:e.sliceWidth,wavePosition:e.wavePosition,waveSpeed:e.waveSpeed,frequency:e.frequency,amplitude:e.amplitude*t},a=new TM.SliceSet(e.ctx,i,n);e.sets.push(a),t*=e.amplitudeOffset}},e.start=function(){e.isPlaying||(e.isPlaying=!0,e.createSets(),e.tick())},e.userInput=function(t){e.ix=t},e.tick=function(){e.ctx.clearRect(0,0,TM.W,TM.H);for(var t=e.sets.length-1;t>=0;t--)e.sets[t].tick(e.ix);e.isPlaying&&window.requestAnimFrame(e.tick.bind(this))},e.init()},TM.Slice=function(e,t,i,n,a){var T=this;T.img=e,T.rect=a,T.tx=a.x+TM.LOGO_RECT.x,T.ty=T.y=TM.LOGO_RECT.y,T.x=t+TM.LOGO_RECT.x,T.amplitude=0,T.height=n,T.width=i,T.update=function(){T.x+=.4*(T.tx-T.x),T.y+=.4*(T.ty-T.y)},T.draw=function(e){e.drawImage(T.img,T.rect.x,T.rect.y,T.rect.width,T.rect.height,T.x,T.y,T.width,T.height)}},TM.SliceSet=function(e,t,i){var n=this;n.slices=[],n.ctx=e,n.setindex=t,n.vo=i,n.frequency=n.vo.frequency,n.power=0,n.powerEase=.1,n.init=function(){n.createSlices()},n.createSlices=function(){n.slices=[];for(var e=Math.ceil(TM.LOGO_RECT.width/n.vo.sliceWidth),t=0;e>t;t++){var i=TM.IS_RETINA?2:1,a={x:t*i*n.vo.sliceWidth,y:n.setindex*i*TM.LOGO_RECT.height,width:i*n.vo.sliceWidth,height:i*TM.LOGO_RECT.height};n.slices.push(new TM.Slice(TM.LOGO_SHEET,t*n.vo.sliceWidth,n.vo.sliceWidth,TM.LOGO_RECT.height,a))}},n.tick=function(e){for(var t=n.slices.length,i=0;t>i;i++){var a=n.slices[i];if(e){var T=2*Math.min(.5,Math.abs(e-(i+1)/t)),s=Easing.Circular.EaseInOut(1-T);a.amplitude=s*n.vo.amplitude*n.power}else a.amplitude*=n.power;var o=((i+1)/395+n.vo.wavePosition)%1;a.ty=Math.sin(2*o*Math.PI*n.frequency)*a.amplitude+TM.LOGO_RECT.y,a.tx=TM.LOGO_RECT.x+i*n.vo.sliceWidth,a.update(),a.draw(n.ctx)}e?(n.vo.wavePosition+=n.vo.waveSpeed,n.power+=.1*(1-n.power)):n.power-=n.power*n.powerEase},n.init()},Easing={Circular:{}},Easing.Circular.EaseInOut=function(e){return(e/=.5)<1?-.5*(Math.sqrt(1-e*e)-1):.5*(Math.sqrt(1-(e-=2)*e)+1)};
+	 </script>
+				
    </body>
 </html>
